fixed formatting on mobile

--- a/apiexplorer.css
+++ b/apiexplorer.css
@@ -1,5 +1,5 @@
-body {
-  padding-top: 50px;
+li {
+    line-height: 40px;
 }
 
 #result {
@@ -9,4 +9,8 @@ body {
 
 .content {
     margin-top: 20px;
+}
+
+.nav li {
+    font-size: 16px;
 }
